--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="body-bg">
+    <audio id="celebrationMusic" src="victory.mp3"></audio>
     <div id="quiz-container" class="container">
         <div class="pixel-cat" id="cat-avatar"></div>
         
